# inbev

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: Dockerfile  docker-compose.yml
docs/: SOLUTION_BLUEPRINT.md  architecture.md  monitoring.md  runbook.md
src/bees_breweries/: __init__.py  __main__.py
src/bees_breweries/config/: schemas.py  settings.py
src/bees_breweries/domain/: enums.py  models.py
src/bees_breweries/ingestion/: api_client.py  bronze_writer.py  extractor.py  metadata_client.py  paginator.py
src/bees_breweries/observability/: logging.py
src/bees_breweries/orchestration/airflow/: __init__.py
src/bees_breweries/orchestration/airflow/dags/: breweries_pipeline.py
src/bees_breweries/processing/: bronze_to_silver.py  silver_to_gold.py  spark_session_factory.py  validators.py
src/bees_breweries/utils/: clock.py  filesystem.py  ids.py
tests/integration/: test_bronze_to_silver.py  test_silver_to_gold.py
tests/unit/: test_bronze_writer.py  test_paginator.py  test_settings.py
